--- a/css/main.css
+++ b/css/main.css
@@ -1,481 +1,9 @@
 
-.mybrand {
-    font-family: Fira Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    text-transform: uppercase;
-    color: #DA222A;
-    text-align: center;
-
-}
-
-.mon {
-    margin-right: 0px !important;
-    font-family: Fira Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-}
-
-.bt-zvonok {
-    width: 161px;
-    height: 37px;
-    color: #FFFFFF;
-    background: #DA222A;
-    border: 1px solid #FFFFFF;
-    box-sizing: border-box;
-    border-radius: 2px;
-}
-
-button:focus {
-    outline: 1px dotted !important;
-}
-
-.tel-company {
-    font-size: 20px;
-    line-height: 19px;
-    text-align: right;
-    text-decoration-line: none;
-    color: #DA222A !important;
-}
-
-.fon-block {
-    background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.5)), url("/uploud/fon-logo.jpg") no-repeat;
-    width: 100%;
-    height: auto;
-}
-
-.mycontainer {
-    margin-left: 50px;
-    margin-right: 50px;
-}
-
-.mycol {
-    padding: 0 !important;
-    margin: 0 !important;
-}
-
-.mit {
-    height: 823.77px;
-}
-
-.block_1 {
-    padding-top: 170px;
-    font-size: 30px;
-    font-family: Helvetica Narrow;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 30px;
-    color: #959595;
-}
-
-.block_2 {
-    padding-top: 40px;
-    font-family: Cuprum;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 64px;
-    line-height: 132.83%;
-    /* or 85px */
-    text-transform: uppercase;
-    color: #FFFFFF;
-}
-
-.block_3 {
-    padding-top: 90px;
-    font-family: Cuprum;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 64px;
-    line-height: 74px;
-    text-transform: uppercase;
-    color: #FFFFFF;
-}
-
-.block_podbor {
-    height: auto;
-    top: -45px;
-    position: relative;
-    background: #FFFFFF;
-    box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, .2);
-}
-
-.group-input {
-    display: flex;
-}
-
-.bn {
-    /*height: 33px;*/
-    line-height: inherit;
-    text-decoration: none;
-    border: solid 1px #d9d9dc;
-    box-shadow: 1px 1px 3px 0 rgba(217, 217, 220, 0.5);
-    font-family: Helvetica LT Std;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 17px;
-    color: rgba(65, 65, 65, 0.73);
-}
-
-.bn:visited {
-    color: #020202;
-
-}
-
-.bn:focus {
-    text-decoration: none;
-    box-shadow: -1px 3px 3px 0px rgb(217, 217, 220);
-}
-
-.bn:hover {
-    box-shadow: -1px 3px 3px 0px rgb(217, 217, 220);
-    text-decoration: none;
-    color: rgba(65, 65, 65, 0.73);
-}
-
-.left-btn {
-    border-left: none;
-    border-right: none;
-}
-
-.center-btn {
-    border-right: none;
-}
-
-.right-input {
-    border-left: none;
-}
-
-.group-price {
-    font-size: 14px;
-    display: flex;
-}
-
-.deck {
-    padding-bottom: 5px;
-    border: solid 1px #d9d9dc;
-}
-
-.left-input {
-    border-right: none;
-}
-
-.button {
-    width: inherit;
-    height: 37px;
-    background-color: #DA222A;
-    color: rgb(255, 255, 255);
-    font-size: 14px;
-    cursor: pointer;
-    display: inline-flex;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    border-radius: 3px;
-    outline: none;
-    border-width: initial;
-    border-style: none;
-    border-color: initial;
-    border-image: initial;
-    transition: all 0.3s ease-out 0s;
-}
-
-.filter {
-    height: 50px;
-
-}
-
-.group-hat {
-}
-
-
-.block-filter {
-    position: relative;
-    z-index: 999999;
-    background: #FFFFFF;
-    padding: 50px;
-}
-
-.info-jk {
-    height: auto;
-    background: url("/uploud/Group 21.1.svg") no-repeat 0px 50px;
-    position: relative;
-    top: -200px;
-    padding-top: 150px;
-}
-
-.v-red {
-    padding-top: 50px;
-    font-family: Helvetica Condensed;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    color: #DA222A;
-}
-
-.v-welt {
-    font-family: Fira Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 15px;
-    padding-top: 20px;
-    color: #333333;
-}
-
-.clik {
-    /*bottom: -100px!important;*/
-    margin: 0 !important;
-}
-
-.pols {
-    position: relative;
-    padding-top: 50px;
-}
-
-.nxt-btn {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23DA222A' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e") !important;
-}
-
-.carousel-control-prev-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23DA222A' viewBox='0 0 8 8'%3E%3Cpath d='M4 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
-}
-
-/*.carousel-indicators .active {*/
-/*    background-color: #e88c90 !important;*/
-/*}*/
-
-/*.carousel-indicators .active:hover {*/
-/*     background-color: #DA222A !important;*/
-/* }*/
-
-.block-info {
-    height: 340px;
-    background: url("/uploud/Group 77.svg") no-repeat 100%;
-    top: -110px;
-}
-
-.new-btn-right {
-    height: 90px;
-    width: 100px;
-    background: url("/uploud/Ellipse.svg") -10px;
-}
-
-.h-440 {
-    height: 440px;
-}
-
-.left-block-info {
-    padding-bottom: 50px;
-}
-
-.krt {
-    padding-top: 120px;
-}
-
-.krt h3 {
-    padding-bottom: 30px;
-    font-family: Philosopher;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 138.6%;
-    text-transform: uppercase;
-
-    color: #959595;
-}
-
-.krt h1 {
-    font-family: Cuprum;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 64px;
-    line-height: 132.83%;
-    text-transform: uppercase;
-    color: #000000;
-
-}
-
-.krt p {
-    padding-top: 50px;
-    font-family: Fira Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 168%;
-    color: #333333;
-}
-
-.right-block-info {
-    padding-bottom: 50px;
-}
-
-.new-slider {
-    box-shadow: 0px 9px 5px 2px rgba(0, 0, 0, .2);
-}
-
-.brdr-zero img {
-    position: relative;
-    left: 40%;
-    width: inherit;
-    height: 440px;
-    border-radius: 100%;
-}
-
-.brde-cub img {
-    position: relative;
-    left: 40%;
-    width: inherit;
-    height: 440px;
-}
-
-.yut_kvartir h1 {
-    font-family: Roboto Condensed;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 60px;
-    line-height: 80px;
-    letter-spacing: -1px;
-    text-transform: uppercase;
-    color: #272727;
-
-}
-
-.yut_kvartir p {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 19px;
-    letter-spacing: -0.222222px;
-    color: #9F9F9F;
-}
-
-.brdr-plan {
-    margin-top: 60px;
-    padding: 5px;
-    background: #F0F43E;
-    font-family: Cuprum;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 30px;
-    line-height: 132.83%;
-    text-transform: uppercase;
-    color: #000000;
-    text-align: center;
-}
-
-.podbor-rvrt {
-    padding: 25px 0px;
-}
-
-.podbor-filter {
-    padding: 30px;
-    box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, .2);
-}
-
-.new_filter {
-
-    line-height: 2;
-}
-
-.bodbor-block-1 {
-    font-family: Fira Sans;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 132.1%;
-    letter-spacing: 0.02em;
-    color: #000000;
-}
-
-.green-block {
-    background-color: #008F5C;
-    height: 340px;
-    margin-top: 40px;
-    padding-top: 150px;
-}
-
-.block-video {
-    box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, .2);
-
-}
-
-.map-block h1 {
-    padding-top: 200px;
-}
-
-/*nttttttttttttttttttttttttttttttttttttttt*/
-@media screen and (max-width: 600px) {
-    .block_1 {
-        padding-top: 20px;
-    }
-
-    .block_2 {
-        font-size: 42px;
-    }
-
-    .block_3 {
-        font-size: 35px;
-    }
-
-    .mybrand {
-        font-size: 18px;
-    }
-
-    .group-price {
-        padding: 3px;
-        display: block;
-    }
-
-    .group-price input {
-        height: 38px;
-    }
-
-    .left-input {
-        border: solid 1px #d9d9dc;
-    }
-
-    .block-filter {
-        padding: 0px;
-    }
-
-    .krt h1 {
-        font-size: 37px;
-    }
-
-    .krt h3 {
-        font-size: 30px;
-    }
-
-    .krt p {
-        padding-top: 30px;
-    }
-
-    .v-red {
-        padding-top: 50px;
-    }
-
-    .brde-cub img {
-        left: 0;
-    }
-
-    .brdr-zero img {
-        left: 0;
-    }
-
-    .yut_kvartir h1 {
-        font-size: 50px;
-    }
-
-    .map-block h1 {
-        padding-top: 0px;
-    }
-}
-
-
 /*новые*/
+.mycontainer {
+    margin-left: 45px !important;
+    margin-right: 45px !important;
+}
 
 .list--logo {
     list-style: none;
@@ -494,7 +22,7 @@ button:focus {
 }
 
 .telephony {
-    font-size: 24px !important;
+    font-size: 18px !important;
     line-height: 31px;
     color: #000000 !important;
 }
@@ -510,7 +38,7 @@ button:focus {
 }
 
 .Myindicators {
-    bottom: 20% !important;
+    bottom: 30% !important;
     left: 60% !important;
 }
 
@@ -535,40 +63,159 @@ button:focus {
 .btn.btn--viabr:hover {
     color: #ffffff;
 }
-nav .btn:focus{
+
+nav .btn:focus {
     box-shadow: 0 0 0 0.2rem rgba(236, 87, 15, 0.63);
 }
-.zakaz{
+
+.zakaz {
     color: #DB0000;
-    font-size: 21px;
+    font-size: 18px;
     line-height: 27px;
 }
-.zakaz:hover{
+
+.zakaz:hover {
     color: #DB0000;
     text-decoration: none;
 }
-.main--filter{
+
+.main--filter {
     background-color: #ffffff;
     height: auto;
-    bottom: 175px;
+    bottom: 130px;
     position: relative;
-    margin: 30px;
     border-radius: 30px 90px 5px 5px;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.11);
 }
-.filters--form{
+
+.filters--form {
     padding: 30px;
 }
-.filters--form span{
+
+.filters--form span {
     font-size: 30px;
 }
-.filters--form a, .filters--form a:hover{
+
+.filters--form a, .filters--form a:hover {
     font-size: 18px;
     color: #000;
     text-decoration: none;
 }
-.btn.btn--search{
+
+.btn.btn--search, .btn.btn--search:hover {
     color: #ffffff;
     font-size: 20px;
     background-color: red;
+}
+
+.form-check span {
+    font-size: 18px;
+}
+
+.cl {
+    padding-top: 15px;
+}
+
+.btn-outline-secondary {
+    border-color: #ced4da !important;
+}
+
+.button-ck input {
+    display: none;
+}
+
+.left-block {
+    border: 1px solid #ced4da;
+}
+.left-block h5{
+    color: #DA222A;
+    padding-bottom: 10px;
+}
+.left-block p{
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+.news-staty{
+    font-size: 18px;
+    padding-top: 90px;
+}
+.Cost {
+    font-size: 18px;
+    color: #6c757d;
+}
+
+.Price {
+    font-size: 18px;
+    vertical-align: middle;
+    line-height: 3;
+}
+.btn.btn-mycolor,.btn.btn-mycolor:hover {
+    color: #FFFFFF;
+    background-color: #DA222A
+}
+.card img{
+    height: 230px;
+}
+.info-block{
+    bottom: 80px;
+    position: relative;
+}
+.info-block-slider-left{
+    padding: 30px;
+}
+.carousel-indicators.block li{
+    width: 15px !important;
+    height: 15px !important;
+    border-radius: 100%;
+    background-color:#DA222A;
+    margin-right: 10px;
+}
+.carousel-inner{
+    height: 500px;
+}
+.carousel-indicators.block{
+    margin:0px;
+    width: 50%;
+
+}
+.carousel-control-next.btn--next{
+right: 50%;
+    top: 470px;
+    z-index: 999999;
+}
+.carousel-control-prev.btn--prev{
+    top: 470px;
+    z-index: 999999;
+}
+.carousel-control-next-icon.btn--icon{
+background-image: url("/uploud/Group-right.svg");
+}
+.carousel-control-prev-icon.btn--icon{
+background-image: url("/uploud/Group-left.svg");
+}
+.info--1 {
+    color: #DA222A;
+    font-size: 18px;
+    margin: 40px 0px ;
+
+}
+.info-block-slider img{
+    height: 530px;
+    padding-top: 30px;
+}
+.info-block-slider{
+    margin-top: 300px;
+}
+.carousel-inner.lop{
+    height: 530px;
+}
+.carousel-control-next.btn-next{
+    top: 42%;
+    bottom: 42%;
+    right: -6%;
+}
+.carousel-control-next-icon.btn-icon{
+    background-image: url("/uploud/Ellipse.svg");
+    width: 150px;
+    height: 150px;
 }
